# sophos-firewall-api

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
sophos-firewall-web/: Cargo.toml  README.md
sophos-firewall-web/src/: lib.rs  main.rs
src/: authz.rs  client.rs  http.rs  lib.rs  request.rs  response.rs  transport.rs  xml.rs
src/resources/: admin.rs  common.rs  dns.rs  firewall.rs  mod.rs  network.rs  service.rs  system.rs  user.rs  webfilter.rs  zone.rs
tests/: admin.rs  authorization.rs  client_transport_response.rs  dns.rs  firewall.rs  http_transport.rs  network.rs  services.rs  system.rs  url_groups.rs  user.rs  webfilter.rs  xml_request.rs  zone.rs
