[package]
name = "sophos-firewall"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Mathias Ringhof"]
license = "MIT OR Apache-2.0"
description = "Rust library for Sophos Firewall API access with object-scoped authorization"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
quick-xml = "0.38"
url = "2.5"

[dev-dependencies]
pretty_assertions = "1.4"
