[package]
name = "sophos-firewall-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Mathias Ringhof"]
license = "MIT OR Apache-2.0"
description = "Typed Rust client primitives for the Sophos Firewall XML API"

[features]
default = []
blocking-http = ["dep:reqwest"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
quick-xml = "0.38"
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
], optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
